--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -57,7 +57,7 @@
       "field": "Field",
       "fieldPlaceholder": "Select field",
       "calculation": "Calculation",
-      "calculationPlaceholder": "select",
+      "calculationPlaceholder": "Select",
       "timePeriod": "Time Period",
       "operator": "Operator",
       "operatorPlaceholder": ">=",
