fill dropdowns with values

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -64,6 +64,8 @@
       "value": "Value",
       "valuePlaceholder": "Enter value"
     },
+    "calculationAverage": "Average",
+    "calculationInstant": "Instant",
     "severityLevel": "Severity level",
     "ruleStatus": "Rule status",
     "ruleEnabled": "Enabled",
