fix for review comments

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -42,38 +42,6 @@
     "loading": "Loading",
     "simulationDescription": "Start or stop simulation of devices. Stopping device simulation will minimize the cost of the solution; no simulated telemetry will be sent to your IoT Hub and alarms will not be generated for simulated devices."
   },
-  "rulesFlyout": {
-    "newRule": "New rule",
-    "ruleName": "Rule name",
-    "namePlaceholder": "Enter rule name",
-    "description": "Description",
-    "descriptionPlaceholder": "Enter rule description",
-    "deviceGroup": "Device group",
-    "deviceGroupPlaceholder": "Select device group",
-    "conditions": "Conditions",
-    "addCondition": "Add condition",
-    "condition": {
-      "condition": "Condition",
-      "field": "Field",
-      "fieldPlaceholder": "Select field",
-      "calculation": "Calculation",
-      "calculationPlaceholder": "Select",
-      "timePeriod": "Time Period",
-      "operator": "Operator",
-      "operatorPlaceholder": ">=",
-      "value": "Value",
-      "valuePlaceholder": "Enter value"
-    },
-    "calculationAverage": "Average",
-    "calculationInstant": "Instant",
-    "severityLevel": "Severity level",
-    "ruleStatus": "Rule status",
-    "ruleEnabled": "Enabled",
-    "ruleDisabled": "Disabled",
-    "devicesAffected": "devices affected by this rule",
-    "apply": "Apply",
-    "cancel": "Cancel"
-  },
   "dashboard": {
     "panels": {
       "alarms": {
@@ -250,6 +218,41 @@
       "maintenanceLog": "Maintenance log",
       "unknown": "Unknown",
       "explore": "Explore"
+    },
+    "flyouts": {
+      "ruleEditor": {
+        "newRule": "New rule",
+        "ruleName": "Rule name",
+        "namePlaceholder": "Enter rule name",
+        "description": "Description",
+        "descriptionPlaceholder": "Enter rule description",
+        "deviceGroup": "Device group",
+        "deviceGroupPlaceholder": "Select device group",
+        "conditions": "Conditions",
+        "addCondition": "Add condition",
+        "delete": "Delete",
+        "condition": {
+          "condition": "Condition",
+          "field": "Field",
+          "fieldPlaceholder": "Select field",
+          "calculation": "Calculation",
+          "calculationPlaceholder": "Select",
+          "timePeriod": "Time Period",
+          "operator": "Operator",
+          "operatorPlaceholder": ">=",
+          "value": "Value",
+          "valuePlaceholder": "Enter value"
+        },
+        "calculationAverage": "Average",
+        "calculationInstant": "Instant",
+        "severityLevel": "Severity level",
+        "ruleStatus": "Rule status",
+        "ruleEnabled": "Enabled",
+        "ruleDisabled": "Disabled",
+        "devicesAffected": "devices affected by this rule",
+        "apply": "Apply",
+        "cancel": "Cancel"
+      }
     }
   },
   "fileInput": {
